reverted to old footer

--- a/theme.html
+++ b/theme.html
@@ -244,6 +244,7 @@
 
     <!-- BEGIN FOOTER -->
      <footer style="position: absolute;bottom: 0;width: 100%;">
+      <div class="footer">
       <div class="container">
         <div class="row">
           <!-- BEGIN COPYRIGHT -->
@@ -251,7 +252,7 @@
             2024 © REVA University. ALL Rights Reserved.
           </div>
           <!-- END COPYRIGHT -->
-          
+        </div>
          
         </div>
       </div>
