--- a/Papers.html
+++ b/Papers.html
@@ -274,7 +274,7 @@
 
                                        <b>For accommodation contact:</b><br>
                                        <ul>
-                                          <li><b>Depart of Physic<br>Dr. Rajavaram Ramaraghavulu</b><br>+91-9704919432<br><a href="mailto:rajavaram.ramraghavulu@reva.edu.in" target="_blank">rajavaram.ramraghavulu@reva.edu.in</a></li>
+                                          <li><b>Depart of Physics<br>Dr. Rajavaram Ramaraghavulu</b><br>+91-9704919432<br><a href="mailto:rajavaram.ramraghavulu@reva.edu.in" target="_blank">rajavaram.ramraghavulu@reva.edu.in</a></li>
                                           <li><b>Depart of Chemistry<br>Dr. Srinivas M</b><br>+91-9900447889<br><a href="mailto:srinivas.m@reva.edu.in" target="_blank">srinivas.m@reva.edu.in</a></li>
                                           <li><b>Depart of Biotechnology<br>Dr.Vivek Keshri</b><br>Assistant Professor<br>+91-9755806309<br><a href="mailto:vivek_keshri@reva.edu.in" target="_blank">vivek_keshri@reva.edu.in</a><br></li>
                                        </ul>
