--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                             </p>
 							<hr>
 							<p class="carousel-subtitle-v5 margin-bottom-30" align="center" data-animation="animated fadeInDown">
-                                Organized by<br>School of Applied Sciences, REVA University
+                                Jointly Organized by<br>School of Applied Sciences, REVA University And INTI International University
                             </p>
 
                                                    
