international speaker updated

--- a/speakers.html
+++ b/speakers.html
@@ -130,34 +130,21 @@
           <!-- BEGIN CONTENT -->
           <div class="col-md-12 col-sm-12">
             <div class="content-page"> 
-              <h1>Awaited Speakers</h1>            
+              <h1>International Speakers</h1>            
               <!-- BEGIN Awaited Speakers -->
               <div class="row recent-work margin-bottom-40">          
                 <div class="col-md-12">
                   <div class="owl-carousel owl-carousel4">
             <div class="recent-work-item">
                       <em>
-                        <img src="assets/pages/img/Logo/Empty_pic.jpg" height="250" width="80" alt="Awaited Speakers">
-                <a href="#" target="_blank"><i class="fa fa-link"></i></a>
-                        <a href="assets/pages/img/Logo/Empty_pic.jpg" class="fancybox-button" title="Awaited Speakers" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
-                      <a class="recent-work-description" href="javascript:;">
-                        <strong>----------</strong>
-                        <b>----------</b><br>
-                        <b>----------</b><br>
-                        <b>----------</b><br>
-                      </a>
-                    </div>
-                    <div class="recent-work-item">
-                      <em>
-                        <img src="assets/pages/img/Logo/Empty_pic.jpg" height="250" width="80" alt="Awaited Speakers">
+                        <img src="assets/pages/img/Logo/Empty_pic.jpg" height="250" width="80" alt="Prof. Dr. Jayanthi Barasarathi">
                         <a href="#" target="_blank"><i class="fa fa-link"></i></a>
-                        <a href="assets/pages/img/Logo/Empty_pic.jpg" class="fancybox-button" title="Awaited Speakers" data-rel="fancybox-button"><i class="fa fa-search"></i></a>
-                      </em>
+                        <a href="assets/pages/img/Logo/Empty_pic.jpg" class="fancybox-button" title="Prof. Dr. Jayanthi Barasarathi" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
                       <a class="recent-work-description" href="javascript:;">
-                        <strong>----------</strong>
-                        <b>----------</b><br>
-                        <b>----------</b><br>
-                        <b>----------</b>
+                        <strong>Prof. Dr. Jayanthi Barasarathi</strong>
+                        <b>Associate Professor</b><br>
+                        <b>Faculty of Life Sciences</b><br>
+                        <b>INTI University, Malaysia</b><br>
                       </a>
                     </div>
                   </div>
