upadted link for Prof. Dr. Jayanthi Barasarathi

--- a/speakers.html
+++ b/speakers.html
@@ -137,9 +137,9 @@
                   <div class="owl-carousel owl-carousel4">
             <div class="recent-work-item">
                       <em>
-                        <img src="assets/pages/img/Logo/Empty_pic.jpg" height="250" width="80" alt="Prof. Dr. Jayanthi Barasarathi">
+                        <img src="assets/pages/img/Logo/Prof. Dr. Jayanthi Barasarathi.jpeg" height="250" width="80" alt="Prof. Dr. Jayanthi Barasarathi">
                         <a href="#" target="_blank"><i class="fa fa-link"></i></a>
-                        <a href="assets/pages/img/Logo/Empty_pic.jpg" class="fancybox-button" title="Prof. Dr. Jayanthi Barasarathi" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
+                        <a href="assets/pages/img/Logo/Prof. Dr. Jayanthi Barasarathi.jpeg" class="fancybox-button" title="Prof. Dr. Jayanthi Barasarathi" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
                       <a class="recent-work-description" href="javascript:;">
                         <strong>Prof. Dr. Jayanthi Barasarathi</strong>
                         <b>Associate Professor</b><br>
