changed National and International Advisory Members

--- a/Committee.html
+++ b/Committee.html
@@ -260,20 +260,25 @@
 									<div class="col-md-6"> 
                                         <li><b>Dr. Reji Philips</b>, Professor, Raman Research Institute, Bengaluru</li>  
 										<li><b>Dr. Akshay Naik</b>, Associate Professor, CeNSE, Indian Institute of Science, Bengaluru</li>
-										<li><b>Dr. Girish Gowda Division Head</b>, Thin Films Division Laboratory for Electro-Optics Systems (LEOS) ISRO, Dept. of Space, Govt. of India</li> 
+										<li><b>Dr. Girish Gowda</b>, Division Head, Thin Films Division Laboratory for Electro-Optics Systems (LEOS) ISRO, Dept. of Space, Govt. of India</li> 
 										<li><b>Dr. Chandrabhas Narayana</b>, Director, Rajiv Gandhi Centre for Biological Science, Thycaud P O, Thiruvananthapuram</li>
 										<li><b>Prof. Jagadeesh</b>, Rajenahally Group Leader “Synergy between Homogeneous and Heterogeneous Catalysis”, Leibniz Institute for Catalysis, Rostock, Germany</li>  
 										<li><b>Dr. Pavan Kumar</b>, Senior Scientist, Chemical Sciences & IP, CSIR Institute</li>
                                         <li><b>Dr. Sanjeev P</b>, Maradur Associate Professor, Materials Science Division, PPISR, Devenahalli, Chikkaballapur, Karnataka.</li>
                                         <li><b>Dr. Arun Mohan Isloor</b>, Professor & Head, Department of Chemical Sciences, National Institute of Technology-Karnataka, Surathkal</li>
+                                        <li><b>Dr. Shaik Althaf</b>,Assosciate Professor, College of Science , King Soudi Arabia</li>
+                                        <li><b>Dr. Nellaiah Hariharan</b>, Head, R & D and Training, Bangalore Biotech Labs. Pvt. Ltd. (BiOZEEN) Bengaluru, Karnataka, India</li>
                                     </div>
                                     <div class="col-md-6">                                        
-                                        <li><b>Dr. Bony De Kumar</b>, Director of Operations, Yale Genome Analysis Center, Yale University, Connecticut, USA</li>
-                                        <li><b>Dr. Nellaiah Hariharan</b>, Head, R & D and Training, Bangalore Biotech Labs. Pvt. Ltd. (BiOZEEN) Bengaluru, Karnataka, India</li>
                                         <li><b>Prof. Sreeramanan Subramaniam</b>, School of Biological Sciences & Centre for Chemical Biology (CCB), Universiti Sains Malaysia (USM), Penang, Malaysia</li>
                                         <li><b>Prof. Kondaiah</b>, Emiretus Professor, Indian Institute of Sciences, (IISc), Bangalore</li>
                                         <li><b>Dr. Kumar Kothapalli</b>, Dell Medical School, The University of Texas at Austin, USA</li>
                                         <li><b>Dr.Dinesh Rangappa</b>, Professor, Department of Applied Sciences, Nanotechnology, Visvesvaraya Technological University, Chikkaballapura, Karntataka, India</li>										
+                                        <li><b>Dr. Kumar Krishnan</b>, Assoc.Prof.essor Life Science Division, Faculty of Health and Life Sciences, INTI International University, Malaysia</li>
+                                        <li><b>Dr. Ho Soon Min</b>, Professor, Life Science Division, Faculty of Health and Life Sciences, INTI International University, Malaysia</li>
+                                        <li><b>Ms. Emily Quek</b>, Life Science Division, Faculty of Health and Life Sciences, INTI International University, Malaysia</li>
+                                        <li><b>Dr. Rabi’atul Adawiyah Ahmad</b>, Life Science Division, Faculty of Health and Life Sciences, INTI International University, Malaysia</li>
+                                        <li><b>Leong Wai Ching</b>, Life Science Division, Faculty of Health and Life Sciences, Malaysia</li>
 									</div>                                      
                                   </ul>
                                </div>
