changed Gceramic to Ceramics

--- a/theme.html
+++ b/theme.html
@@ -149,7 +149,7 @@
 									  <li>Luminescence-Materials and Applications</li>
                     <li>Carbon-based materials</li>
                     <li>Radiation effect on materials</li>  									    
-									  <li>GCeramics</li>
+									  <li>Ceramics</li>
                     <li>Dielectrics and Ferroelectric Materials</li>  									  
 									  <li>Thin Films and Related Technologies</li>  
 									  <li>Photovoltaic Materials and Cells</li>  
