chnages to about

--- a/aboutus.html
+++ b/aboutus.html
@@ -134,25 +134,25 @@
               <div class="row margin-bottom-30">
                 <!-- BEGIN INFO BLOCK -->               
                 <div class="col-md-12">
-                  <h1 class="no-top-space">About REVA University</h1>
-                  <p align="justify"> REVA University, established under the REVA University Act 2012, offers 39 undergraduate programs, 32 postgraduate programs, 18 PhD programs, and various certification and diploma courses across various disciplines. The university supports research leading to Doctoral Degrees in all disciplines. Programs focus on knowledge assimilation, practical applications, hands-on training, global and industrial relevance, and social significance. The faculty consists of experienced academics and industry professionals, ensuring a curriculum that bridges academia and industry. The university's lush green campus includes state-of-the-art laboratories, classrooms, and sports facilities, making it a preferred choice among students and recruiters</p>              
+                  <h1 class="no-top-space">About the 4<sup>th</sup> International Conference</h1>
+                  <p align="justify"> The School of Applied Sciences at REVA University is hosting the "Global trends in Sustainable Technology its Applications in Applied Sciences (ICGTSTAS-2024)" on October 24th and 25th, 2024. The conference aims to deliver outstanding outcomes and challenges in the Physical, Chemical, Biological, Medical, and Health Science sectors. It will bring together researchers, scientists, technicians, and scholars from all fields to discuss original research conclusions, new approaches, and developmental practices. The conference theme is "Global trends in Sustainable Technology its Applications in Applied Sciences (ICGTSTAS-2024)," aiming to provide an interdisciplinary platform for discussing recent innovations, trends, and practical challenges in Life Science, Chemical & Physical sciences, and Medial Sciences.</p>              
                   <hr>
                 </div>
+                <div class="col-md-6">
+                  <h3 class="no-top-space">About REVA University</h3>
+                  <p align="justify">REVA University, established under the REVA University Act 2012, offers 39 undergraduate programs, 32 postgraduate programs, 18 PhD programs, and various certification and diploma courses across various disciplines. The university supports research leading to Doctoral Degrees in all disciplines. Programs focus on knowledge assimilation, practical applications, hands-on training, global and industrial relevance, and social significance. The faculty consists of experienced academics and industry professionals, ensuring a curriculum that bridges academia and industry. The university's lush green campus includes state-of-the-art laboratories, classrooms, and sports facilities, making it a preferred choice among students and recruiters. </p>     
+                </div>  
+                <div class="col-md-6">
+				          <h3 class="no-top-space">About School of Applied Sciences</h3>
+                  <p align="justify">The School of Applied Sciences at REVA University is staffed by experienced faculty, equipped with state-of-the-art facilities like digital classrooms and laboratories. The academic atmosphere is serene, and the school collaborates with industries and research organizations to provide necessary skills. The goal is to develop a critical thinking community for innovative problem-solving. The school has published numerous peer-reviewed articles and received grants from funding agencies like DST, DBT, VGST, and ICMR.</p>                  
+                </div>
                 <div class="col-md-12">
-                  <h1 class="no-top-space">About INTI International University</h1>
+                  <hr>
+                  <h3 class="no-top-space">About INTI International University</h3>
                   <p align="justify">INTI International University stands as one of Malaysia's leading private universities, nestled within 82 acres of meticulously landscaped grounds in the bustling town of Putra Nilai, approximately an hour south of the capital city Kuala Lumpur. The university offers an ideal environment for academic growth, complete with state-of-the-art facilities and amenities.With a history spanning over 35 years, INTI International University & Colleges serves as a beacon of educational excellence, having produced over 86,000 graduates across its four campuses. Currently, the university and its colleges foster a vibrant community of over 13,000 local and international students, providing them with a dynamic, cross-cultural learning experience.</p>
                   <hr>
                 </div>
-				<div class="col-md-6">
-				<h3 class="no-top-space">About School of Applied Sciences</h3>
-                  <p align="justify">The School of Applied Sciences at REVA University is staffed by experienced faculty, equipped with state-of-the-art facilities like digital classrooms and laboratories. The academic atmosphere is serene, and the school collaborates with industries and research organizations to provide necessary skills. The goal is to develop a critical thinking community for innovative problem-solving. The school has published numerous peer-reviewed articles and received grants from funding agencies like DST, DBT, VGST, and ICMR.</p>                  
-                </div>
-				<div class="col-md-6">
-				<h3 class="no-top-space">About the 4<sup>th</sup> International Conference</h3>
-                  <p align="justify">The School of Applied Sciences at REVA University is hosting the "Global trends in Sustainable Technology its Applications in Applied Sciences (ICGTSTAS-2024)" on October 24th and 25th, 2024. The conference aims to deliver outstanding outcomes and challenges in the Physical, Chemical, Biological, Medical, and Health Science sectors. It will bring together researchers, scientists, technicians, and scholars from all fields to discuss original research conclusions, new approaches, and developmental practices. The conference theme is "Global trends in Sustainable Technology its Applications in Applied Sciences (ICGTSTAS-2024)," aiming to provide an interdisciplinary platform for discussing recent innovations, trends, and practical challenges in Life Science, Chemical & Physical sciences, and Medial Sciences. </p>
-</p>     
-</div>             
-                </div>
+              </div>
                 <!-- END INFO BLOCK -->   
               
               </div>
