added sliding text to home pg

--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
 
     <div class="main">
       <div class="container">
+        <marquee><b>NOTE:</b> Selected research papers will be considered for publication in reputed journals and conference proceedings.</marquee>
         
 		<!-- BEGIN SERVICE BOX -->   
         <div class="row service-box margin-bottom-40">
