removed margine to slider nd marquee

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <!-- Header END -->
 
     <!-- BEGIN SLIDER -->
-    <div class="page-slider margin-bottom-40">
+    <div class="page-slider">
         <div id="carousel-example-generic" class="carousel slide carousel-slider">   
 		 <!-- Indicators -->
             <ol class="carousel-indicators carousel-indicators-frontend">
@@ -186,7 +186,7 @@
 
     <div class="main">
       <div class="container">
-        <marquee class="margin-bottom-40"><b>NOTE:</b> Selected research papers will be considered for publication in reputed journals and conference proceedings.</marquee>
+        <marque><b>NOTE:</b> Selected research papers will be considered for publication in reputed journals and conference proceedings.</marquee>
         
 		<!-- BEGIN SERVICE BOX -->   
         <div class="row service-box margin-bottom-40">
