corrected spelling for margin class

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <!-- Header END -->
 
     <!-- BEGIN SLIDER -->
-    <div class="page-slider bottom-margin-20">
+    <div class="page-slider margin-bottom-20">
         <div id="carousel-example-generic" class="carousel slide carousel-slider">   
 		 <!-- Indicators -->
             <ol class="carousel-indicators carousel-indicators-frontend">
