--- a/registration.html
+++ b/registration.html
@@ -191,6 +191,7 @@
        <td>24<sup>th</sup> & 25<sup>th</sup>October 2024</td>    
      </tr> 
    </table>
+   <marquee><b>NOTE:</b> Selected research papers will be considered for publication in reputed journals and conference proceedings.</marquee>
    </div>
 			
 			 <div class="col-md-6">
