--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
     <!-- BEGIN HEADER -->
     <div class="header">
       <div class="container">
-        <a class="site-logo" href="index.html"><img src="assets/pages/img/Logo/Reva_logo.jpeg" alt="REVA University" width="198" height="60"></a>
+        <a class="site-logo" href="index.html"><img src="assets/pages/img/Logo/logo.png" alt="REVA University" width="198" height="60"></a>
 
         <a href="javascript:void(0);" class="mobi-toggler"><i class="fa fa-bars"></i></a>
 
