corrected info on sponsors pg

--- a/sponsors.html
+++ b/sponsors.html
@@ -122,13 +122,13 @@
                                         <div class="recent-work-item">
                                             <img src="assets/pages/img/Logo/Raman Innolabs (Pvt Lmtd).jpeg" width="300" alt="Raman Innolabs (Pvt Lmtd)">
                                             <a class="recent-work-description" href="javascript:;">
-                                                <strong>Raman Innolabs (Pvt Lmtd)</strong>
+                                                <strong>Raman Innolabs (Pvt. Ltd.)</strong>
                                             </a>
                                         </div>
                                         <div class="recent-work-item">
                                             <img src="assets/pages/img/Logo/Venture Scientific (Pvt Lmtd).jpeg" width="300" alt="Raman Innolabs (Pvt Lmtd)">
                                             <a class="recent-work-description" href="javascript:;">
-                                                <strong>Venture Scientific (Pvt Lmtd)</strong>
+                                                <strong>Venture Scientific (Pvt. Ltd.)</strong>
                                             </a>
                                         </div>
                                     </div>
