added new sponsor Kamaljeeth Instruments

--- a/sponsors.html
+++ b/sponsors.html
@@ -131,6 +131,12 @@
                                                 <strong>Venture Scientific (Pvt. Ltd.)</strong>
                                             </a>
                                         </div>
+                                        <div class="recent-work-item"></div>
+                                            <img src="assets/pages/img/Logo/kamalajeet.jpeg" width="300" alt="Kamaljeeth Instruments">
+                                            <a class="recent-work-description" href="javascript:;">
+                                                <strong>Kamaljeeth Instruments</strong>
+                                            </a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>    
