--- a/sponsors.html
+++ b/sponsors.html
@@ -131,7 +131,7 @@
                                                 <strong>Venture Scientific (Pvt. Ltd.)</strong>
                                             </a>
                                         </div>
-                                        <div class="recent-work-item"></div>
+                                        <div class="recent-work-item">
                                             <img src="assets/pages/img/Logo/kamalajeet.jpeg" width="300" alt="Kamaljeeth Instruments">
                                             <a class="recent-work-description" href="javascript:;">
                                                 <strong>Kamaljeeth Instruments</strong>
