--- a/speakers.html
+++ b/speakers.html
@@ -149,8 +149,8 @@
                   <strong>Dr.Harish Barshilia</strong>
                   <b>Chief Scientist and Head</b><br>
 				          <b>Surface Engineering Division</b><br>
-				          <b>CSIR - National Aerospace,</b><br>
-                  <b>IndiaPhysical Sciences </b>
+				          <b>CSIR - National Aerospace laboratory,</b><br>
+                  <b>India</b>
 
                 </a>
               </div>
@@ -175,7 +175,8 @@
                 </em>
                 <a class="recent-work-description" href="javascript:;">
                   <strong>Dr. Tharamani</strong>
-                  <b>Professor &amp; Head</b><br> <b>IIT -Ropar</b><br>
+                  <b>Professor &amp; Head Department of Chemistry</b><br>
+                  <b>IIT -Ropar</b><br>
 				          <b>Panjab</b>
                 </a>
               </div>			  
@@ -194,8 +195,7 @@
                   <strong>Dr.E. Bhoje Gowd</strong>
                   <b>FSenior Principal Scientist and Professor (AcSIR)</b><br>
 				          <b>CSIR-NIIST, Trivandrum</b><br>
-                  <b>IndiaProf. Dr. DVR. Saigopal</b><br>
-                  <b>Founder Vice chancellor, Cluster university, Kurnool, Andhra Pradesh</b>		  
+                  <b>India</b><br>	  
                 </a>
               </div>
 			  <div class="recent-work-item">
