small changes to speaker

--- a/speakers.html
+++ b/speakers.html
@@ -149,7 +149,7 @@
                   <strong>Dr.Harish Barshilia</strong>
                   <b>Chief Scientist and Head</b><br>
 				          <b>Surface Engineering Division</b><br>
-				          <b>CSIR - National Aerospace laboratory,</b><br>
+				          <b>CSIR - National Aerospace Laboratory,</b><br>
                   <b>India</b>
 
                 </a>
@@ -175,7 +175,7 @@
                 </em>
                 <a class="recent-work-description" href="javascript:;">
                   <strong>Dr. Tharamani</strong>
-                  <b>Professor &amp; Head Department of Chemistry</b><br>
+                  <b>Professor &amp; Head<br>Department of Chemistry</b><br>
                   <b>IIT -Ropar</b><br>
 				          <b>Panjab</b>
                 </a>
