--- a/index.html
+++ b/index.html
@@ -108,52 +108,75 @@
     <div class="page-slider margin-bottom-20">
         <div id="carousel-example-generic" class="carousel slide carousel-slider">   
 		 <!-- Indicators -->
-            <ol class="carousel-indicators carousel-indicators-frontend">
-                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="1"></li>                
-            </ol>      
+     <ol class="carousel-indicators carousel-indicators-frontend">
+      <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="3"></li>                  
+  </ol>     
 
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
                 <!-- First slide -->
-                  <div class="item carousel-item-eight active">
-                    <div class="container">
-                        <div class="carousel-position-six"> 
-						              <h2 class="animate-delay carousel-title-v6" align="center" data-animation="animated fadeInDown" style="font-weight: bold;">
-                            Oct 24<sup>th</sup>-25<sup>th</sup>, 2024 <a target="_blank" href="https://calendar.google.com/calendar/event?action=TEMPLATE&tmeid=N2g0bjhwdGJpY2x2a2VzMDQzcG9ncWM5a2QgbmFraHVsc3BAbQ&tmsrc=nakhulsp%40gmail.com"><i class="fa fa-calendar" style="font-size:20px;color:white"></i></a> &nbsp;&nbsp;9:00AM | Bangalore, Karnataka, India<p><script src="https://cdn.logwork.com/widget/countdown.js"></script>
-                            <a href="https://logwork.com/countdown-wi33" class="countdown-timer" data-style="columns" data-width="400" data-timezone="Asia/Kolkata" data-textcolor="#ffffff" data-date="2024-10-24 00:00" data-background="#00" data-digitscolor="#f1f1f1" data-unitscolor="#f1f1f1">Event in</a></p>
-                          </h2>
-                          <p class="carousel-subtitle-v7" align="center" data-animation="animated fadeInDown">
-                            4<sup>th</sup> International Conference on
-                          </p>   
-							            <p class="carousel-subtitle-v6" data-animation="animated fadeInDown">
-                            "Global Trends in Sustainable Technology and its Applications in Applied Sciences"<br>(ICGTSTAS-2024)
-                          </p>
-							            <p class="carousel-subtitle-v5 margin-bottom-30" align="center" data-animation="animated fadeInDown">
-                            Organized by<br>School of Applied Sciences, REVA University<br>in collaboration with<br>INTI International University
-                          </p>                        
-                        </div>
-                    </div>
+                <div class="item carousel-item-one active">
+                  <div class="container">
+                      <div class="carousel-position-l"> 
+                        <h2 class="animate-delay carousel-title-v6" align="center" data-animation="animated fadeInDown" style="font-weight: bold;">
+                          Oct 24<sup>th</sup>-25<sup>th</sup>, 2024 <a target="_blank" href="https://calendar.google.com/calendar/event?action=TEMPLATE&tmeid=N2g0bjhwdGJpY2x2a2VzMDQzcG9ncWM5a2QgbmFraHVsc3BAbQ&tmsrc=nakhulsp%40gmail.com"><i class="fa fa-calendar" style="font-size:20px;color:white"></i></a> &nbsp;&nbsp;9:00AM | Bangalore, Karnataka, India<p><script src="https://cdn.logwork.com/widget/countdown.js"></script>
+                          <a href="https://logwork.com/countdown-wi33" class="countdown-timer" data-style="columns" data-width="400" data-timezone="Asia/Kolkata" data-textcolor="#ffffff" data-date="2024-10-24 00:00" data-background="#00" data-digitscolor="#f1f1f1" data-unitscolor="#f1f1f1">Event in</a></p>
+                        </h2>
+                        <p class="carousel-subtitle-v7" align="center" data-animation="animated fadeInDown">
+                          4<sup>th</sup> International Conference on
+                        </p>   
+                        <p class="carousel-subtitle-v6" data-animation="animated fadeInDown">
+                          "Global Trends in Sustainable Technology and its Applications in Applied Sciences"<br>(ICGTSTAS-2024)
+                        </p>
+                        <p class="carousel-subtitle-v5 margin-bottom-30" align="center" data-animation="animated fadeInDown">
+                          Organized by<br>School of Applied Sciences, REVA University<br>in collaboration with<br>INTI International University
+                        </p>                        
+                      </div>
+                  </div>
                 </div> 
-				<!-- Second slide -->
-              	<!--div class="item carousel-item-nine">
-                    <div class="container">
-                        <div class="carousel-position-six text-uppercase text-center">
-                            <h2 class="margin-bottom-20 animate-delay carousel-title-v5" data-animation="animated fadeInDown">
-                                Nobel Laureate<br/>
-                                <span class="carousel-title-normal">Prof. Ada E. Yonath</span>
-                            </h2>
-                            <p class="carousel-subtitle-v5 border-top-bottom margin-bottom-30" data-animation="animated fadeInDown">for studies of the structure and function of the ribosome</p>
-							<p class="carousel-subtitle-v6 text-uppercase" data-animation="animated fadeInDown">
-                                Keynote speaker @ 2<sup>nd</sup> International Conference on <br></p>
-								<p><a class="carousel-btn-red">"Global Trends in Applied Sciences, Medical and Health Sciences-2022"</a></p>
-                            </p>
-							<hr>
-                            <a class="carousel-btn-green" href="#" data-animation="animated fadeInUp">Joining Live</a>
-                        </div>
+      <!-- Second slide -->
+                <div class="item carousel-item-two">
+                  <div class="container">
+                      <div class="carousel-position-r"> 
+                        <h2 class="animate-delay carousel-title-v6" align="center" data-animation="animated fadeInDown" style="font-weight: bold;">
+                          Oct 24<sup>th</sup>-25<sup>th</sup>, 2024 <a target="_blank" href="https://calendar.google.com/calendar/event?action=TEMPLATE&tmeid=N2g0bjhwdGJpY2x2a2VzMDQzcG9ncWM5a2QgbmFraHVsc3BAbQ&tmsrc=nakhulsp%40gmail.com"><i class="fa fa-calendar" style="font-size:20px;color:white"></i></a> &nbsp;&nbsp;9:00AM | Bangalore, Karnataka, India<p><script src="https://cdn.logwork.com/widget/countdown.js"></script>
+                          <a href="https://logwork.com/countdown-wi33" class="countdown-timer" data-style="columns" data-width="400" data-timezone="Asia/Kolkata" data-textcolor="#ffffff" data-date="2024-10-24 00:00" data-background="#00" data-digitscolor="#f1f1f1" data-unitscolor="#f1f1f1">Event in</a></p>
+                        </h2>
+                        <p class="carousel-subtitle-v7" align="center" data-animation="animated fadeInDown">
+                          4<sup>th</sup> International Conference on
+                        </p>   
+                        <p class="carousel-subtitle-v6" data-animation="animated fadeInDown">
+                          "Global Trends in Sustainable Technology and its Applications in Applied Sciences"<br>(ICGTSTAS-2024)
+                        </p>
+                        <p class="carousel-subtitle-v5 margin-bottom-30" align="center" data-animation="animated fadeInDown">
+                          Organized by<br>School of Applied Sciences, REVA University<br>in collaboration with<br>INTI International University
+                        </p>                        
+                      </div>
+                  </div>
+                </div>
+              <!-- Third slide -->
+              <div class="item carousel-item-three">
+                <div class="container">
+                    <div class="carousel-position-l"> 
+                      <h2 class="animate-delay carousel-title-v6" align="center" data-animation="animated fadeInDown" style="font-weight: bold;">
+                        Oct 24<sup>th</sup>-25<sup>th</sup>, 2024 <a target="_blank" href="https://calendar.google.com/calendar/event?action=TEMPLATE&tmeid=N2g0bjhwdGJpY2x2a2VzMDQzcG9ncWM5a2QgbmFraHVsc3BAbQ&tmsrc=nakhulsp%40gmail.com"><i class="fa fa-calendar" style="font-size:20px;color:white"></i></a> &nbsp;&nbsp;9:00AM | Bangalore, Karnataka, India<p><script src="https://cdn.logwork.com/widget/countdown.js"></script>
+                        <a href="https://logwork.com/countdown-wi33" class="countdown-timer" data-style="columns" data-width="400" data-timezone="Asia/Kolkata" data-textcolor="#ffffff" data-date="2024-10-24 00:00" data-background="#00" data-digitscolor="#f1f1f1" data-unitscolor="#f1f1f1">Event in</a></p>
+                      </h2>
+                      <p class="carousel-subtitle-v7" align="center" data-animation="animated fadeInDown">
+                        4<sup>th</sup> International Conference on
+                      </p>   
+                      <p class="carousel-subtitle-v6" data-animation="animated fadeInDown">
+                        "Global Trends in Sustainable Technology and its Applications in Applied Sciences"<br>(ICGTSTAS-2024)
+                      </p>
+                      <p class="carousel-subtitle-v5 margin-bottom-30" align="center" data-animation="animated fadeInDown">
+                        Organized by<br>School of Applied Sciences, REVA University<br>in collaboration with<br>INTI International University
+                      </p>                        
                     </div>
-                </div-->				
-				<!-- Controls -->
+                </div>
+              </div>			<!-- Controls -->
             <a class="left carousel-control carousel-control-shop carousel-control-frontend" href="#carousel-example-generic" role="button" data-slide="prev">
                 <i class="fa fa-angle-left" aria-hidden="true"></i>
             </a>
