changed the moving text

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
     <div class="main">
       <div class="container">
-        <marquee><b>NOTE:</b> Selected research papers will be considered for publication in reputed journals and conference proceedings.</marquee>
+        <marquee><b>NOTE:</b>***Selected peer reviewed and relevent articles will be peer reviewed and published in Advanced Energy Conversion Materials, which comes under  the scope of energy conversion materials with ISBN number : ISSN:2717-5804***</marquee>
         
 		<!-- BEGIN SERVICE BOX -->   
         <div class="row service-box margin-bottom-40">
