--- a/registration.html
+++ b/registration.html
@@ -176,7 +176,7 @@
        <td>24<sup>th</sup> & 25<sup>th</sup>October 2024</td>    
      </tr> 
    </table>
-   <marquee><b>NOTE:</b> Selected research papers will be considered for publication in reputed journals and conference proceedings.</marquee>
+   <marquee><b>NOTE:</b>***Selected peer reviewed and relevent articles will be peer reviewed and published in Advanced Energy Conversion Materials, which comes under  the scope of energy conversion materials with ISBN number : ISSN:2717-5804***</marquee>
    </div>
 			
 			 <div class="col-md-6">
