--- a/Papers.html
+++ b/Papers.html
@@ -138,8 +138,8 @@
                                <div class="panel-collapse collapse in" id="accordion1_1">
                                   <div class="panel-body">
                                     <p>Research abstracts, broadly within the scope of the conference thematic areas, written in English language (250 words), are solicited with the declaration of originality. Abstracts may be submitted electronically during the registration. Abstracts will be published in the conference compendium. The abstract proposal should explain the topic of your presentation, describe the research, practice, and outcomes. Abstract proposals will be evaluated through a blind peer review and selected abstracts will be considered for the conference compendium.<br> 
-                                       <b>Abstract submission deadline:</b> 1<sup>st</sup> October 2024<br>
-                                       <b>Confirmation of Selected Abstracts:</b> 10<sup>th</sup> October, 2024<br>
+                                       <b>Abstract submission deadline:</b> 15<sup>th</sup> October 2024<br>
+                                       <b>Confirmation of Selected Abstracts:</b> 15<sup>th</sup> October, 2024<br>
                                        <b>Submit your abstract in:</b> <a href="https://docs.google.com/forms/d/e/1FAIpQLSfTTRbGXoSDeZvBJ1jOtOa8VEgmFhlSFVqe6JCHJOYARAPkPw/viewform" target="_blank">ICGTSTAS-2024 Application Forms</a></p>
 									<p><em><i class="fa fa-download red"></i></em>
               <a class="carousel-btn-green" href="Abstact_format.docx" data-animation="animated fadeInUp"><span>Abstract format</span></a></p>
