--- a/Committee.html
+++ b/Committee.html
@@ -122,7 +122,7 @@
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion1" href="#accordion1_1">
-                                    Chief Patron
+                                    Chief Patrons
                                     </a>
                                 </h4>
                             </div>
@@ -262,7 +262,7 @@
                                         <li><b>Dr. Ho Soon Min</b>, Professor, Life Science Division, Faculty of Health and Life Sciences, INTI International University, Malaysia</li>
                                         <li><b>Ms. Emily Quek</b>, Life Science Division, Faculty of Health and Life Sciences, INTI International University, Malaysia</li>
                                         <li><b>Dr. Rabi’atul Adawiyah Ahmad</b>, Life Science Division, Faculty of Health and Life Sciences, INTI International University, Malaysia</li>
-                                        <li><b>Leong Wai Ching</b>, Life Science Division, Faculty of Health and Life Sciences, Malaysia</li>
+                                        <li><b>Dr. Leong Wai Ching</b>, Life Science Division, Faculty of Health and Life Sciences, Malaysia</li>
 									</div>                                      
                                   </ul>
                                </div>
