changes for speakers (added new changed one to unknown)

--- a/speakers.html
+++ b/speakers.html
@@ -120,6 +120,18 @@
               <div class="row recent-work margin-bottom-40">          
                 <div class="col-md-12">
                   <div class="owl-carousel owl-carousel4">
+                    <div class="recent-work-item">
+                      <em>
+                        <img src="assets/pages/img/Logo/Dr. Lam Man Kee.jpeg" height="252" width="80" alt="Dr. Lam Man Kee">
+                        <a href="https://khub.utp.edu.my/people/e0225-Lam.php#" target="_blank"><i class="fa fa-link"></i></a>
+                        <a href="assets/pages/img/Logo/Dr. Lam Man Kee.jpeg" class="fancybox-button" title="Dr. Lam Man Kee" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
+                      <a class="recent-work-description" href="javascript:;">
+                        <strong>Dr. Lam Man Kee</strong>
+                        <b>Senior Lecturer</b><br>
+                        <b>Chemical Engineering Department,</b><br>
+                        <b>Universiti Teknologi PETRONAS</b><br>
+                      </a>
+                    </div>
             <div class="recent-work-item">
                       <em>
                         <img src="assets/pages/img/Logo/Prof. Dr. Jayanthi Barasarathi.jpeg" height="252" width="80" alt="Prof. Dr. Jayanthi Barasarathi">
@@ -188,14 +200,14 @@
             <div class="owl-carousel owl-carousel4">
 			<div class="recent-work-item">
                 <em>
-                  <img src="assets/pages/img/Logo/E. Bhoje Gowd.jpeg" height="250" width="80" alt="Dr.E. Bhoje Gowd">
-				          <a href="https://www.niist.res.in/dr-e-bhoje-gowd" target="_blank"><i class="fa fa-link"></i></a>
-                  <a href="assets/pages/img/Logo/E. Bhoje Gowd.jpeg" class="fancybox-button" title="Dr.E. Bhoje Gowd" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                
+                  <img src="assets/pages/img/Logo/Empty_pic.jpg" height="250" width="80" alt="Dr.E. Bhoje Gowd">
+				          <a href="#" target="_blank"><i class="fa fa-link"></i></a>
+                  <a href="assets/pages/img/Logo/Empty_pic.jpg" class="fancybox-button" title="#" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                
 				  </em><a class="recent-work-description" href="javascript:;">
-                  <strong>Dr.E. Bhoje Gowd</strong>
-                  <b>FSenior Principal Scientist and Professor (AcSIR)</b><br>
-				          <b>CSIR-NIIST, Trivandrum</b><br>
-                  <b>India</b><br>	  
+                  <strong>-----</strong>
+                  <b>-----</b><br>
+				          <b>-----</b><br>
+                  <b>-----</b><br>	  
                 </a>
               </div>
 			  <div class="recent-work-item">
