--- a/application.html
+++ b/application.html
@@ -64,7 +64,7 @@
                 <div class="col-md-6 col-sm-6 additional-shop-info">
                     <ul class="list-unstyled list-inline">
                         <li><i class="fa fa-phone"></i><span>+91-8277049441</span></li>
-                        <li><i class="fa fa-envelope-o"></i><span>conference.soas@reva.edu.in</span></li>
+                        <li><i class="fa fa-envelope-o"></i><span>icgtstas2024@gmail.com</span></li>
                     </ul>
                 </div>
                 <!-- END TOP BAR LEFT PART -->
@@ -119,7 +119,7 @@
             <h1>Application form</h1>
             <div class="content-page">              
               <p>
-			          For any registration queries and other payment methods or any conference related queries feel free to reach us at <a href="mailto:conference.soas@reva.edu.in" target="_blank">conference.soas@reva.edu.in</a><br>
+			          For any registration queries and other payment methods or any conference related queries feel free to reach us at <a href="mailto:icgtstas2024@gmail.com" target="_blank">icgtstas2024@gmail.com</a><br>
               </p>
               <p>Application form link: <a href="https://docs.google.com/forms/d/e/1FAIpQLSfTTRbGXoSDeZvBJ1jOtOa8VEgmFhlSFVqe6JCHJOYARAPkPw/viewform" target="_blank">ICGTSTAS-2024 Application Forms</a></p><br>
               <p>Abstract format : <a class="carousel-btn-green" href="Abstact_format.docx" data-animation="animated fadeInUp"><span>Abstract format</span></a></p><br>
