--- a/program.html
+++ b/program.html
@@ -62,7 +62,7 @@
                 <div class="col-md-6 col-sm-6 additional-shop-info">
                     <ul class="list-unstyled list-inline">
                         <li><i class="fa fa-phone"></i><span>+91-9844158444</span></li>
-                        <li><i class="fa fa-envelope-o"></i><span>conference.soas@reva.edu.in</span></li>
+                        <li><i class="fa fa-envelope-o"></i><span>icgtstas2024@gmail.com</span></li>
                     </ul>
                 </div>
                 <!-- END TOP BAR LEFT PART -->
