added new speaker

--- a/speakers.html
+++ b/speakers.html
@@ -115,7 +115,7 @@
           <!-- BEGIN CONTENT -->
           <div class="col-md-12 col-sm-12">
             <div class="content-page"> 
-              <h1>International Speakers</h1>            
+              <h1>Keynote Speakers</h1>            
               <!-- BEGIN Awaited Speakers -->
               <div class="row recent-work margin-bottom-40">          
                 <div class="col-md-12">
@@ -132,26 +132,26 @@
                         <b>Universiti Teknologi PETRONAS</b><br>
                       </a>
                     </div>
-            <div class="recent-work-item">
-                      <em>
-                        <img src="assets/pages/img/Logo/Prof. Dr. Jayanthi Barasarathi.jpeg" height="252" width="80" alt="Prof. Dr. Jayanthi Barasarathi">
-                        <a href="https://newinti.edu.my/360/iResearch/FHLS.html" target="_blank"><i class="fa fa-link"></i></a>
-                        <a href="assets/pages/img/Logo/Prof. Dr. Jayanthi Barasarathi.jpeg" class="fancybox-button" title="Prof. Dr. Jayanthi Barasarathi" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
-                      <a class="recent-work-description" href="javascript:;">
-                        <strong>Prof. Dr. Jayanthi Barasarathi</strong>
-                        <b>Associate Professor</b><br>
-                        <b>Faculty of Life Sciences</b><br>
-                        <b>INTI University, Malaysia</b><br>
-                      </a>
-                    </div>
                   </div>
                   </div>
                   </div>
-              <h1>Our Speakers</h1>            
+              <h1>Plenary Speaker</h1>            
         <!-- BEGIN RECENT WORKS -->
         <div class="row recent-work margin-bottom-40">          
           <div class="col-md-12">
             <div class="owl-carousel owl-carousel4">
+              <div class="recent-work-item">
+                <em>
+                  <img src="assets/pages/img/Logo/Prof. Dr. Jayanthi Barasarathi.jpeg" height="252" width="80" alt="Prof. Dr. Jayanthi Barasarathi">
+                  <a href="https://newinti.edu.my/360/iResearch/FHLS.html" target="_blank"><i class="fa fa-link"></i></a>
+                  <a href="assets/pages/img/Logo/Prof. Dr. Jayanthi Barasarathi.jpeg" class="fancybox-button" title="Prof. Dr. Jayanthi Barasarathi" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
+                <a class="recent-work-description" href="javascript:;">
+                  <strong>Prof. Dr. Jayanthi Barasarathi</strong>
+                  <b>Associate Professor</b><br>
+                  <b>Faculty of Life Sciences</b><br>
+                  <b>INTI University, Malaysia</b><br>
+                </a>
+              </div>
 			<div class="recent-work-item">
                 <em>
                   <img src="assets/pages/img/Logo/Harish Barshilia.jpeg" height="250" width="80" alt="Dr.Harish Barshilia">
@@ -200,14 +200,14 @@
             <div class="owl-carousel owl-carousel4">
 			<div class="recent-work-item">
                 <em>
-                  <img src="assets/pages/img/Logo/Empty_pic.jpg" height="250" width="80" alt="Dr.E. Bhoje Gowd">
-				          <a href="#" target="_blank"><i class="fa fa-link"></i></a>
-                  <a href="assets/pages/img/Logo/Empty_pic.jpg" class="fancybox-button" title="#" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                
+                  <img src="assets/pages/img/Logo/Dr. Mugesh.jpeg" height="250" width="80" alt="Dr. Mugesh.jpeg">
+				          <a href="https://www.mugesh-iisc.in/mugesh" target="_blank"><i class="fa fa-link"></i></a>
+                  <a href="assets/pages/img/Logo/Dr. Mugesh.jpeg" class="fancybox-button" title="#" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                
 				  </em><a class="recent-work-description" href="javascript:;">
-                  <strong>-----</strong>
-                  <b>-----</b><br>
-				          <b>-----</b><br>
-                  <b>-----</b><br>	  
+                  <strong>Dr. G. Mugesh</strong>
+                  <b>Professor<br>IPC Department Dean</b><br>
+				          <b>Division of Chemical Sciences</b><br>
+                  <b>Indian Institute of Science Bangalore</b><br>	  
                 </a>
               </div>
 			  <div class="recent-work-item">
